# STM32F103C8T6-Template

./: Cargo.toml  README.md  build.rs  cargo-generate.toml  memory.x
src/: main.rs
