[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "1.0.0"
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "medium"] }
defmt = "1.0.1"
# Do not block when probe-rs disconnect
# https://docs.rs/defmt-rtt/latest/defmt_rtt/#blockingnon-blocking
defmt-rtt = { version = "1.1.0", features = ["disable-blocking-mode"] }

[profile.dev]
opt-level = "s"

[profile.release]
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
debug = 2
